--- a/index.html
+++ b/index.html
@@ -595,12 +595,14 @@ footer p {
     <h2>Ready to <em>transform</em> your business?</h2>
     <p>Let's talk about your goals and build something that works.</p>
   </div>
-  <div class="cta-action">
-    <a href="https://wa.me/2348111458346" class="btn-primary">Get In Touch →</a>
+  <div class="cta-action" style="display: flex; gap: 16px; flex-wrap: wrap;">
+    <a href="mailto:thekyndrd2gmail.com" class="btn-primary">📧 Email Us</a>
+    <a href="https://wa.me/2348111458346" class="btn-ghost">💬 WhatsApp</a>
   </div>
 </section>
 
 <!-- FOOTER -->
 <footer>
   <div class="logo">ERO<span style="color:var(--accent)">.</span></div>
+
   <p>© 2025 Eromosele Ltd. All rights
