--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ footer p {
     <p>Let's talk about your goals and build something that works.</p>
   </div>
   <div class="cta-action" style="display: flex; gap: 16px; flex-wrap: wrap;">
-    <a href="mailto:thekyndrd2gmail.com" class="btn-primary">📧 Email Us</a>
+    <a href="mailto:thekyndrdgmail.com" class="btn-primary">📧 Email Us</a>
     <a href="https://wa.me/2348111458346" class="btn-ghost">💬 WhatsApp</a>
   </div>
 </section>
@@ -606,3 +606,4 @@ footer p {
   <div class="logo">ERO<span style="color:var(--accent)">.</span></div>
 
   <p>© 2025 Eromosele Ltd. All rights
+
