--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ footer p {
   <div class="hero-inner">
     <div class="hero-tag">Open for new projects</div>
     <h1>Copywriting, Design & Marketing That <em>Scales</em> Your Business</h1>
-    <p>We turn ambitious brand ideas into market leading businesses through high conversion messaging and strategic advertising that are result-oriented.</p>
+    <p>The fastest way to grow your business.</p>
     <div class="hero-actions">
       <a href="#contact" class="btn-primary">Scale My Business</a>
       <a href="#services" class="btn-ghost">See What We Do</a>
@@ -606,5 +606,6 @@ footer p {
   <div class="logo">ERO<span style="color:var(--accent)">.</span></div>
 
   <p>© 2025 Eromosele Ltd. All rights
+
 
 
